--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mopics</title>
   </head>
   <body>
+    <noscript>You most enable javascript in your browser</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
